--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -39,32 +39,30 @@
 
         </android.support.design.widget.TextInputLayout>
 
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutSpinner"
-            android:layout_below="@+id/textInputLayoutName"
+        <RelativeLayout
+            android:id="@+id/rel_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textInputLayoutName"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
-            android:hint="Priority"
-            android:background="@drawable/text_background"
-            android:focusableInTouchMode="true">
+            android:background="@drawable/text_background">
 
             <Spinner
-                android:id="@+id/spinner"
+                android:id="@+id/textInputLayoutSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="48dp" />
+                android:layout_height="48dp">
 
-        </android.support.design.widget.TextInputLayout>
+            </Spinner>
+        </RelativeLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutDate"
-            android:layout_below="@+id/textInputLayoutSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/rel_layout"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
@@ -92,13 +90,13 @@
 
         <Button
             android:id="@+id/save_notes"
-            android:layout_below="@+id/textInputLayoutDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="24dp"
+            android:layout_below="@+id/textInputLayoutDate"
             android:layout_marginStart="72dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="72dp"
+            android:background="@color/colorPrimary"
             android:text="Save"
             android:textColor="@android:color/white" />
 
