--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                         android:layout_below="@id/no_event"
                         android:layout_centerInParent="true"
                         android:padding="24dp"
-                        android:text="No Reminders Found"
+                        android:text="No Notes Found"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
                         android:textSize="20sp" />
